Import of OESTERHOL/Locale-Framework-SQL-0.07 from CPAN.
gitpan-cpan-distribution: Locale-Framework-SQL
gitpan-cpan-version:      0.07
gitpan-cpan-path:         OESTERHOL/Locale-Framework-SQL-0.07.tar.gz
gitpan-cpan-author:       OESTERHOL
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Perl extension Lang.
 
+0.07 Changed testscript to skip tests it cannot handle.
+
 0.06 Changed name in POD
 
 0.05 Changed name from 'Lang' to 'Locale::Framework'.
